src/sherlock/framework/parser/GrammarAgentParser.java
// Generated from GrammarAgent.g4 by ANTLR 4.4
package sherlock.framework.parser;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class GrammarAgentParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.4", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__1=1, T__0=2, AND=3, OR=4, IMPLIES=5, EQUALS=6, EFFECT=7, TRUE=8, FALSE=9, 
		NOT=10, COMMA=11, ADD=12, MINUS=13, LParen=14, RParent=15, LPRE=16, RPRE=17, 
		TIME=18, DEF=19, X=20, NAT=21, FACTSSET=22, DFACTSSET=23, PRULES=24, ACTIONS=25, 
		PACTIONSRULES=26, AGENT=27, RULES=28, STRONGRULES=29, WEAKRULES=30, DESIRES=31, 
		OBSERVATIONS=32, INITBELIEFS=33, RUNTIME=34, LIMITS=35, WORLD=36, SCENARIO=37, 
		ID=38, NUMBER=39, BREAKLINE=40, WS=41;
	public static final String[] tokenNames = {
		"<INVALID>", "':'", "'==='", "'and'", "'or'", "'=>'", "'='", "EFFECT", 
		"'true'", "'false'", "'not'", "','", "'+'", "'-'", "'('", "')'", "'['", 
		"']'", "'t'", "DEF", "'x'", "'nat'", "'Facts'", "'Derived Facts'", "'PermanentRules'", 
		"'Actions'", "'PermanentActionRules'", "'===Agent==='", "'Rules'", "'Strong'", 
		"'Weak'", "'Desires'", "'Observations'", "'InitialWorldBeliefs'", "'Runtime'", 
		"'Limits'", "'===World==='", "'===Scenario==='", "ID", "NUMBER", "BREAKLINE", 
		"WS"
	};
	public static final int
		RULE_parse = 0, RULE_expression = 1, RULE_logicOperator = 2, RULE_bool = 3, 
		RULE_predicat = 4, RULE_signature = 5, RULE_operator = 6, RULE_allFacts = 7, 
		RULE_definitionFact = 8, RULE_allPRules = 9, RULE_allActions = 10, RULE_allRules = 11, 
		RULE_allStrongRules = 12, RULE_allWeakRules = 13, RULE_defRules = 14, 
		RULE_allDesires = 15, RULE_allObservations = 16, RULE_defObservation = 17, 
		RULE_allInitBeliefs = 18, RULE_defInstancePred = 19, RULE_allRuntime = 20, 
		RULE_runtimeDef = 21, RULE_allLimits = 22, RULE_defLimits = 23;
	public static final String[] ruleNames = {
		"parse", "expression", "logicOperator", "bool", "predicat", "signature", 
		"operator", "allFacts", "definitionFact", "allPRules", "allActions", "allRules", 
		"allStrongRules", "allWeakRules", "defRules", "allDesires", "allObservations", 
		"defObservation", "allInitBeliefs", "defInstancePred", "allRuntime", "runtimeDef", 
		"allLimits", "defLimits"
	};

	@Override
	public String getGrammarFileName() { return "GrammarAgent.g4"; }

	@Override
	public String[] getTokenNames() { return tokenNames; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public GrammarAgentParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ParseContext extends ParserRuleContext {
		public AllInitBeliefsContext allInitBeliefs() {
			return getRuleContext(AllInitBeliefsContext.class,0);
		}
		public AllObservationsContext allObservations() {
			return getRuleContext(AllObservationsContext.class,0);
		}
		public AllFactsContext allFacts() {
			return getRuleContext(AllFactsContext.class,0);
		}
		public AllDesiresContext allDesires() {
			return getRuleContext(AllDesiresContext.class,0);
		}
		public AllLimitsContext allLimits() {
			return getRuleContext(AllLimitsContext.class,0);
		}
		public TerminalNode EOF() { return getToken(GrammarAgentParser.EOF, 0); }
		public AllPRulesContext allPRules() {
			return getRuleContext(AllPRulesContext.class,0);
		}
		public AllRuntimeContext allRuntime() {
			return getRuleContext(AllRuntimeContext.class,0);
		}
		public AllActionsContext allActions() {
			return getRuleContext(AllActionsContext.class,0);
		}
		public AllRulesContext allRules() {
			return getRuleContext(AllRulesContext.class,0);
		}
		public ParseContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_parse; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarAgentListener ) ((GrammarAgentListener)listener).enterParse(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarAgentListener ) ((GrammarAgentListener)listener).exitParse(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GrammarAgentVisitor ) return ((GrammarAgentVisitor<? extends T>)visitor).visitParse(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ParseContext parse() throws RecognitionException {
		ParseContext _localctx = new ParseContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_parse);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(48); allLimits();
			setState(49); allFacts();
			setState(50); allActions();
			setState(51); allPRules();
			setState(52); allRules();
			setState(53); allDesires();
			setState(54); allInitBeliefs();
			setState(55); allObservations();
			setState(56); allRuntime();
			setState(57); match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExpressionContext extends ParserRuleContext {
		public ExpressionContext left;
		public ExpressionContext notexp;
		public ExpressionContext parenexp;
		public ExpressionContext prec;
		public ExpressionContext right;
		public TerminalNode NOT() { return getToken(GrammarAgentParser.NOT, 0); }
		public TerminalNode RParent() { return getToken(GrammarAgentParser.RParent, 0); }
		public LogicOperatorContext logicOperator() {
			return getRuleContext(LogicOperatorContext.class,0);
		}
		public PredicatContext predicat() {
			return getRuleContext(PredicatContext.class,0);
		}
		public TerminalNode LParen() { return getToken(GrammarAgentParser.LParen, 0); }
		public TerminalNode LPRE() { return getToken(GrammarAgentParser.LPRE, 0); }
		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class,i);
		}
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}
		public TerminalNode RPRE() { return getToken(GrammarAgentParser.RPRE, 0); }
		public BoolContext bool() {
			return getRuleContext(BoolContext.class,0);
		}
		public ExpressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expression; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarAgentListener ) ((GrammarAgentListener)listener).enterExpression(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarAgentListener ) ((GrammarAgentListener)listener).exitExpression(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GrammarAgentVisitor ) return ((GrammarAgentVisitor<? extends T>)visitor).visitExpression(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ExpressionContext expression() throws RecognitionException {
		return expression(0);
	}

	private ExpressionContext expression(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		ExpressionContext _localctx = new ExpressionContext(_ctx, _parentState);
		ExpressionContext _prevctx = _localctx;
		int _startState = 2;
		enterRecursionRule(_localctx, 2, RULE_expression, _p);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(73);
			switch (_input.LA(1)) {
			case NOT:
				{
				setState(60); match(NOT);
				setState(61); ((ExpressionContext)_localctx).notexp = expression(5);
				}
				break;
			case LParen:
				{
				setState(62); match(LParen);
				setState(63); ((ExpressionContext)_localctx).parenexp = expression(0);
				setState(64); match(RParent);
				}
				break;
			case LPRE:
				{
				setState(66); match(LPRE);
				setState(67); ((ExpressionContext)_localctx).prec = expression(0);
				setState(68); match(RPRE);
				setState(69); predicat();
				}
				break;
			case TRUE:
			case FALSE:
				{
				setState(71); bool();
				}
				break;
			case ID:
				{
				setState(72); predicat();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			_ctx.stop = _input.LT(-1);
			setState(81);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					{
					_localctx = new ExpressionContext(_parentctx, _parentState);
					_localctx.left = _prevctx;
					pushNewRecursionContext(_localctx, _startState, RULE_expression);
					setState(75);
					if (!(precpred(_ctx, 4))) throw new FailedPredicateException(this, "precpred(_ctx, 4)");
					setState(76); logicOperator();
					setState(77); ((ExpressionContext)_localctx).right = expression(5);
					}
					} 
				}
				setState(83);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public static class LogicOperatorContext extends ParserRuleContext {
		public TerminalNode IMPLIES() { return getToken(GrammarAgentParser.IMPLIES, 0); }
		public TerminalNode AND() { return getToken(GrammarAgentParser.AND, 0); }
		public TerminalNode EFFECT() { return getToken(GrammarAgentParser.EFFECT, 0); }
		public TerminalNode OR() { return getToken(GrammarAgentParser.OR, 0); }
		public LogicOperatorContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_logicOperator; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarAgentListener ) ((GrammarAgentListener)listener).enterLogicOperator(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarAgentListener ) ((GrammarAgentListener)listener).exitLogicOperator(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GrammarAgentVisitor ) return ((GrammarAgentVisitor<? extends T>)visitor).visitLogicOperator(this);
			else return visitor.visitChildren(this);
		}
	}

	public final LogicOperatorContext logicOperator() throws RecognitionException {
		LogicOperatorContext _localctx = new LogicOperatorContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_logicOperator);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(84);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << AND) | (1L << OR) | (1L << IMPLIES) | (1L << EFFECT))) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			consume();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BoolContext extends ParserRuleContext {
		public TerminalNode FALSE() { return getToken(GrammarAgentParser.FALSE, 0); }
		public TerminalNode TRUE() { return getToken(GrammarAgentParser.TRUE, 0); }
		public BoolContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_bool; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarAgentListener ) ((GrammarAgentListener)listener).enterBool(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarAgentListener ) ((GrammarAgentListener)listener).exitBool(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GrammarAgentVisitor ) return ((GrammarAgentVisitor<? extends T>)visitor).visitBool(this);
			else return visitor.visitChildren(this);
		}
	}

	public final BoolContext bool() throws RecognitionException {
		BoolContext _localctx = new BoolContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_bool);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(86);
			_la = _input.LA(1);
			if ( !(_la==TRUE || _la==FALSE) ) {
			_errHandler.recoverInline(this);
			}
			consume();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PredicatContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(GrammarAgentParser.ID, 0); }
		public TerminalNode RParent() { return getToken(GrammarAgentParser.RParent, 0); }
		public TerminalNode LParen() { return getToken(GrammarAgentParser.LParen, 0); }
		public SignatureContext signature() {
			return getRuleContext(SignatureContext.class,0);
		}
		public PredicatContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_predicat; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarAgentListener ) ((GrammarAgentListener)listener).enterPredicat(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarAgentListener ) ((GrammarAgentListener)listener).exitPredicat(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GrammarAgentVisitor ) return ((GrammarAgentVisitor<? extends T>)visitor).visitPredicat(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PredicatContext predicat() throws RecognitionException {
		PredicatContext _localctx = new PredicatContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_predicat);
		try {
			setState(94);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(88); match(ID);
				setState(89); match(LParen);
				setState(90); signature();
				setState(91); match(RParent);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(93); match(ID);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SignatureContext extends ParserRuleContext {
		public TerminalNode TIME() { return getToken(GrammarAgentParser.TIME, 0); }
		public OperatorContext operator() {
			return getRuleContext(OperatorContext.class,0);
		}
		public TerminalNode NUMBER() { return getToken(GrammarAgentParser.NUMBER, 0); }
		public SignatureContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_signature; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarAgentListener ) ((GrammarAgentListener)listener).enterSignature(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarAgentListener ) ((GrammarAgentListener)listener).exitSignature(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GrammarAgentVisitor ) return ((GrammarAgentVisitor<? extends T>)visitor).visitSignature(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SignatureContext signature() throws RecognitionException {
		SignatureContext _localctx = new SignatureContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_signature);
		try {
			setState(102);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(96); match(TIME);
				setState(97); operator();
				setState(98); match(NUMBER);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(100); match(TIME);
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(101); match(NUMBER);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class OperatorContext extends ParserRuleContext {
		public TerminalNode ADD() { return getToken(GrammarAgentParser.ADD, 0); }
		public TerminalNode MINUS() { return getToken(GrammarAgentParser.MINUS, 0); }
		public OperatorContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_operator; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarAgentListener ) ((GrammarAgentListener)listener).enterOperator(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarAgentListener ) ((GrammarAgentListener)listener).exitOperator(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GrammarAgentVisitor ) return ((GrammarAgentVisitor<? extends T>)visitor).visitOperator(this);
			else return visitor.visitChildren(this);
		}
	}

	public final OperatorContext operator() throws RecognitionException {
		OperatorContext _localctx = new OperatorContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_operator);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(104);
			_la = _input.LA(1);
			if ( !(_la==ADD || _la==MINUS) ) {
			_errHandler.recoverInline(this);
			}
			consume();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AllFactsContext extends ParserRuleContext {
		public TerminalNode FACTSSET() { return getToken(GrammarAgentParser.FACTSSET, 0); }
		public DefinitionFactContext definitionFact(int i) {
			return getRuleContext(DefinitionFactContext.class,i);
		}
		public TerminalNode BREAKLINE() { return getToken(GrammarAgentParser.BREAKLINE, 0); }
		public List<DefinitionFactContext> definitionFact() {
			return getRuleContexts(DefinitionFactContext.class);
		}
		public AllFactsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_allFacts; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarAgentListener ) ((GrammarAgentListener)listener).enterAllFacts(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarAgentListener ) ((GrammarAgentListener)listener).exitAllFacts(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GrammarAgentVisitor ) return ((GrammarAgentVisitor<? extends T>)visitor).visitAllFacts(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AllFactsContext allFacts() throws RecognitionException {
		AllFactsContext _localctx = new AllFactsContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_allFacts);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(106); match(FACTSSET);
			setState(107); match(T__0);
			setState(108); match(BREAKLINE);
			setState(110); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(109); definitionFact();
				}
				}
				setState(112); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==ID );
			setState(114); match(T__0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DefinitionFactContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(GrammarAgentParser.ID, 0); }
		public TerminalNode BREAKLINE() { return getToken(GrammarAgentParser.BREAKLINE, 0); }
		public DefinitionFactContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_definitionFact; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarAgentListener ) ((GrammarAgentListener)listener).enterDefinitionFact(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarAgentListener ) ((GrammarAgentListener)listener).exitDefinitionFact(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GrammarAgentVisitor ) return ((GrammarAgentVisitor<? extends T>)visitor).visitDefinitionFact(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DefinitionFactContext definitionFact() throws RecognitionException {
		DefinitionFactContext _localctx = new DefinitionFactContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_definitionFact);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(116); match(ID);
			setState(117); match(BREAKLINE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AllPRulesContext extends ParserRuleContext {
		public List<TerminalNode> BREAKLINE() { return getTokens(GrammarAgentParser.BREAKLINE); }
		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class,i);
		}
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}
		public TerminalNode PRULES() { return getToken(GrammarAgentParser.PRULES, 0); }
		public TerminalNode BREAKLINE(int i) {
			return getToken(GrammarAgentParser.BREAKLINE, i);
		}
		public AllPRulesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_allPRules; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarAgentListener ) ((GrammarAgentListener)listener).enterAllPRules(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarAgentListener ) ((GrammarAgentListener)listener).exitAllPRules(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GrammarAgentVisitor ) return ((GrammarAgentVisitor<? extends T>)visitor).visitAllPRules(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AllPRulesContext allPRules() throws RecognitionException {
		AllPRulesContext _localctx = new AllPRulesContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_allPRules);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(119); match(PRULES);
			setState(120); match(T__0);
			setState(121); match(BREAKLINE);
			setState(127);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << TRUE) | (1L << FALSE) | (1L << NOT) | (1L << LParen) | (1L << LPRE) | (1L << ID))) != 0)) {
				{
				{
				setState(122); expression(0);
				setState(123); match(BREAKLINE);
				}
				}
				setState(129);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(130); match(T__0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AllActionsContext extends ParserRuleContext {
		public DefinitionFactContext definitionFact(int i) {
			return getRuleContext(DefinitionFactContext.class,i);
		}
		public TerminalNode ACTIONS() { return getToken(GrammarAgentParser.ACTIONS, 0); }
		public TerminalNode BREAKLINE() { return getToken(GrammarAgentParser.BREAKLINE, 0); }
		public List<DefinitionFactContext> definitionFact() {
			return getRuleContexts(DefinitionFactContext.class);
		}
		public AllActionsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_allActions; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarAgentListener ) ((GrammarAgentListener)listener).enterAllActions(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarAgentListener ) ((GrammarAgentListener)listener).exitAllActions(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GrammarAgentVisitor ) return ((GrammarAgentVisitor<? extends T>)visitor).visitAllActions(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AllActionsContext allActions() throws RecognitionException {
		AllActionsContext _localctx = new AllActionsContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_allActions);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(132); match(ACTIONS);
			setState(133); match(T__0);
			setState(134); match(BREAKLINE);
			setState(138);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==ID) {
				{
				{
				setState(135); definitionFact();
				}
				}
				setState(140);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(141); match(T__0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AllRulesContext extends ParserRuleContext {
		public TerminalNode RULES() { return getToken(GrammarAgentParser.RULES, 0); }
		public AllStrongRulesContext allStrongRules() {
			return getRuleContext(AllStrongRulesContext.class,0);
		}
		public AllWeakRulesContext allWeakRules() {
			return getRuleContext(AllWeakRulesContext.class,0);
		}
		public TerminalNode BREAKLINE() { return getToken(GrammarAgentParser.BREAKLINE, 0); }
		public AllRulesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_allRules; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarAgentListener ) ((GrammarAgentListener)listener).enterAllRules(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarAgentListener ) ((GrammarAgentListener)listener).exitAllRules(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GrammarAgentVisitor ) return ((GrammarAgentVisitor<? extends T>)visitor).visitAllRules(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AllRulesContext allRules() throws RecognitionException {
		AllRulesContext _localctx = new AllRulesContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_allRules);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(143); match(RULES);
			setState(144); match(T__0);
			setState(145); match(BREAKLINE);
			setState(146); match(T__0);
			setState(147); allStrongRules();
			setState(148); allWeakRules();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
